@@ -1,0 +1,2 @@
+install:
+#	cp -r html/ /var/www
