@@ -1,1 +1,3 @@
-lod2demo-1.0.war /var/lib/tomcat6/webapps
+html/lod2.sigma.html /var/www/
+lod2.sigma.html /var/www/
+lod2demo.war /var/lib/tomcat6/webapps
